# rupo

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  group.rs  lib.rs  main.rs
src/cli/: init.rs  sync.rs
src/git/: ops.rs
src/manifest/: mod.rs  toml.rs  xml.rs
src/sync/: mod.rs  parallel.rs  stats.rs
tests/: init_test.rs  sync_test.rs
